# web_scraping_projects

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  scrape.py  setup.sh
config/: .env.example
data/: README.md
ecommerce_price_tracker/: README.md  requirements.txt  tracker.py
job_portal_scraper/: README.md  scraper.py
logs/: README.md
news_headline_aggregator/: README.md  aggregator.py  requirements.txt
real_estate_crawler/: README.md  requirements.txt
src/: __init__.py
src/common/: __init__.py  browser.py  config.py  logger.py  utils.py  validators.py
src/ecommerce/: __init__.py  tracker.py
src/jobs/: __init__.py  scraper.py
src/news/: __init__.py  aggregator.py
src/realestate/: __init__.py  crawler.py
templates/: CODE_OF_CONDUCT.md.resolved.0  Makefile_enhanced  QUICK_REFERENCE.md  SECURITY.md  TESTING_GUIDE.md  TESTING_GUIDE.md.resolved.0  mkdocs.yml
tests/: test_common.py
